# sxml-parser-haskell

./: README.md  prog08.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/19d0c2b8/: cabal_macros.h
.stack-work/ghci/d5d87294/: cabal_macros.h
app/: SXMLReformatExe.hs
examples/: example03_good.sxml  example04_bad.sxml  example05_good.sxml  example06_bad.sxml  example07_good.sxml  example08_bad.sxml  example09_good.sxml  example10_good.sxml  example11_bad.sxml  example12_bad.sxml  example13_bad.sxml  example14_good.sxml  example15_bad.sxml  example16_good.sxml  example17_good.sxml  gettysburg.sxml  gettysburg_short.sxml  sample.pp100.sxml  sample.pp20.sxml  sample.pp40.sxml  sample.pp60.sxml  sample.pp80.sxml  sample.sxml
src/: Parser.hs  PrettyPrinter.hs  SXML.hs  Valid.hs
test/: Spec.hs
test/Spec/: Util.hs
